{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 14,
  "lineage": "6baefdfb-8c7e-5164-e5b5-dcbe02144bad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ca79ea25d7f3ffb6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-45-232.compute-1.amazonaws.com",
            "public_ip": "52.207.45.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "App-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:145806956870:instance/i-01067785d43234f5f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01067785d43234f5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e467b864c51f9c1",
            "private_dns": "ip-10-0-2-251.ec2.internal",
            "private_ip": "10.0.2.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c88ace157392ef6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d5ae7df05d0b0d7",
            "tags": {
              "Name": "App-Server"
            },
            "tags_all": {
              "Name": "App-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ab7b81b9f8ce849"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:145806956870:instance/i-01d084d8e1128c652",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d084d8e1128c652",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043571f04f141597f",
            "private_dns": "ip-10-0-2-37.ec2.internal",
            "private_ip": "10.0.2.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d4fd73612dd057b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d5ae7df05d0b0d7",
            "tags": {
              "Name": "DB-Server"
            },
            "tags_all": {
              "Name": "DB-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ab7b81b9f8ce849"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:145806956870:instance/i-0fbb8edc4aa2adf1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbb8edc4aa2adf1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0acdc875148ede60e",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fccd6069eca84db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf6bc4cba3d1a06f",
            "tags": {
              "Name": "Web-Server"
            },
            "tags_all": {
              "Name": "Web-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ab7b81b9f8ce849"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:internet-gateway/igw-05db1df50d6ed0b84",
            "id": "igw-05db1df50d6ed0b84",
            "owner_id": "145806956870",
            "tags": {
              "Name": "my-IGW"
            },
            "tags_all": {
              "Name": "my-IGW"
            },
            "vpc_id": "vpc-06386c2cd87c9b746"
          },
          "dependencies": [
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca79ea25d7f3ffb6",
            "connectivity_type": "public",
            "id": "nat-05791ddbfb1e91cba",
            "network_interface_id": "eni-069e3eedb138abfdd",
            "private_ip": "10.0.1.101",
            "public_ip": "52.207.45.232",
            "subnet_id": "subnet-0bf6bc4cba3d1a06f",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.public_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:route-table/rtb-021008161c85d4223",
            "id": "rtb-021008161c85d4223",
            "owner_id": "145806956870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05791ddbfb1e91cba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "vpc_id": "vpc-06386c2cd87c9b746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:route-table/rtb-0f6f7e6fff5ba619a",
            "id": "rtb-0f6f7e6fff5ba619a",
            "owner_id": "145806956870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05db1df50d6ed0b84",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-06386c2cd87c9b746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-gw",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e77ad59d389b7cb8",
            "route_table_id": "rtb-021008161c85d4223",
            "subnet_id": "subnet-09d5ae7df05d0b0d7"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02abc29a7e5fd5e3b",
            "route_table_id": "rtb-0f6f7e6fff5ba619a",
            "subnet_id": "subnet-0bf6bc4cba3d1a06f"
          },
          "dependencies": [
            "aws_internet_gateway.my-gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:subnet/subnet-09d5ae7df05d0b0d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09d5ae7df05d0b0d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145806956870",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-06386c2cd87c9b746"
          },
          "dependencies": [
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:subnet/subnet-0bf6bc4cba3d1a06f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bf6bc4cba3d1a06f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145806956870",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-06386c2cd87c9b746"
          },
          "dependencies": [
            "aws_vpc.gogreen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gogreen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145806956870:vpc/vpc-06386c2cd87c9b746",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071a3ff4ae125841f",
            "default_route_table_id": "rtb-07be83e472021dbe7",
            "default_security_group_id": "sg-07ab7b81b9f8ce849",
            "dhcp_options_id": "dopt-e24a1b98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06386c2cd87c9b746",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07be83e472021dbe7",
            "owner_id": "145806956870",
            "tags": {
              "Name": "My-VPC"
            },
            "tags_all": {
              "Name": "My-VPC"
            }
          }
        }
      ]
    }
  ]
}